# omscs_ml_rl

./: .gitignore  CLAUDE.md  Makefile  main.py  ml_run.sh  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
REPORT_RL/: REPRO_RL_schinne3.tex  RL_Report_schinne3.tex  references.bib
REPORT_RL/tables/: report_numbers.tex  tab_bj_dp.tex  tab_bj_mf.tex  tab_cp_disc.tex  tab_cp_dp.tex  tab_cp_mf.tex  tab_dqn_ec.tex  tab_mf_hp_signal.tex
documents/: blackjack_vi_pi_faq.md  concepts.md  copy_report_assets.sh  copy_report_to_overleaf.sh  copy_to_submission.sh  implementation_plan.md  phase1_3_review.md  refactor_plan_constants_plotting.md
documents/canvas/assignment/md/: RL_Report_Spring_2026_FAQ_v2.md  RL_Report_Spring_2026_v1-2.md
documents/quiz/: cs7641_rl_unit_cheatsheet.md
documents/quiz/attemp1/: rl_unit_quiz_review.md
documents/quiz/practice/: RL_Unit_Quiz_Practice_Problems.md  RL_Unit_Quiz_Practice_Solutions.md
documents/steering/: product.md  structure.md  tech.md
scripts/: run_phase_1_env_setup.py  run_phase_2_vi_pi_blackjack.py  run_phase_3_vi_pi_cartpole.py  run_phase_4_model_free_blackjack.py  run_phase_5_model_free_cartpole.py  run_phase_6_comparison.py  run_phase_7_dqn_ec.py  run_phase_8_report_tables.py  visualize_all.py
src/: config.py
src/algorithms/: __init__.py  dqn.py  model_free_utils.py  policy_eval.py  policy_iteration.py  q_learning.py  sarsa.py  value_iteration.py
src/envs/: blackjack_env.py  cartpole_discretizer.py  cartpole_model.py
src/utils/: logger.py  phase_artifacts.py  plotting.py
tests/: test_algorithms.py  test_envs.py  test_model_free.py  test_phase5_model_free_cartpole.py  test_phase6_comparison.py  test_phase7_dqn_ec.py
